--- a/UI/Assets/CSS/index.css
+++ b/UI/Assets/CSS/index.css
@@ -1,32 +1,21 @@
 *{
-	box-sizing: border-box;
 	margin: 0;
+	padding: 0;
 	list-style-type: none;
 	text-decoration: none;
 }
 body{
 	background-color: #605E5E;
-	margin: 0; 
-	padding: 0;
-	height: 100%;
-	/*background-image: url(rain.jpg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	animation: rain .3s linear infinite;*/
+		
 }
-/* .rain-div{
-	width: 100%;
-	height: 100vh;
 
-} */
 .rain {
 	height: auto;
 	width: 30%;
 	margin-left: 850px;
 	margin-top: 100px;
 	
-	/* animation: rain 10s linear infinite; */
+	
 }
 #wall{
 	background-color: black;
@@ -35,113 +24,92 @@ body{
 	color: #13F8CE;
 	text-transform: uppercase;
 	margin-right: 0px;
-	/* margin-top: 0;
-	padding-top: 0; */
 	transform: rotate(15deg);
 	text-align: center;
+	position: relative;
 }
-/* #wall1, #wall2{
-	background-color: white;
-	float: right;
-	font-size: 34px;
-	margin-top: 60px;
-	
-}
-#wall1{
-	margin-left: 1020px;
-} */
-/* @keyframes rain {
-	from{background-position: 0% 0%;}
-	to{background-position: 30% 100%;}
-} */
+
 .sider-bar{
 	position: fixed;
 	left: 0;
 	z-index: 1;
-	width: 66px;
+	width: 90px;
 	height: 100%;
 	background: #393535;
 	overflow: hidden;
 	
 	
+	
 }
 .sider-bar  ul a {
 	display: block;
-	height: 100%;
-	width: 100%;
 	line-height: 40px;
-	/*font-size: 14px;*/
+	font-size: 18px;
 	color: white;
-	/*padding: -5px;*/
+	
 }
 .active,.sider-bar  ul a:hover{
 	color: #13F8CE;
 
 }
+header a img{
+	width: 90px;
+}
 
 
 
 
-/* .my-landing-photo{
-	position: fixed;
-	width: auto;
-	height: 350px;
-	margin:	120px ;
-	cursor: pointer;
-	
 
-} */
-/* .my-landing-photo:hover {
-	animation: bounce 1s linear;
-
-} */
-/* @keyframes bounce{
-	20%,50%,80%,to{
-		transform: translateY(0);
-	}
-	40%{
-		transform: translateY(-100px);
-	}
-	70%{
-		transform: translateY(-50px);
-	}
-} */
 .block{
 	position: fixed;
 	line-height: 90px;
-	margin-left: 150px;
+	margin-left: 90px;
 	margin-top: 130px;
 	font-size: 50px;
-	/*/*font-weight: bold;*/
-	text-align: left;
+	padding: 0 20px;
+	
 
 
 }
-@media (max-width: 1200px) {
-		.block{
-			font-size: 14px;
-			margin-left: 120px;
-			line-height: 35px;
-			margin-top: 250px;
+@media screen and (max-width: 1200px) {
+
+	.block{
+		font-size: 14px;
+		margin-left: 90px;
+		line-height: 35px;
+		margin-top: 190px;
 			
 
-		}
-		.my-landing-photo{
-			width: auto;
-			height: 100px;
-		}
-		.anchor{
-			font-size: 14px;
-			padding: 5px;
-			border: 1px solid;
-			border-radius: 5px;
-		}
-		.rain{
-			margin-left: 300px;
-		}
-		
-		
 	}
+	.sider-bar, header a img{
+		width: 66px;
+	}
+	.sider-bar  ul a{
+		/* line-height: 20px; */
+		font-size: small;
+
+	}
+	.anchor{
+		font-size: 14px;
+		padding: 5px;
+		border: 1px solid;
+		border-radius: 5px;
+	}
+	.rain{
+		margin-left: 150px;
+		width: 20%;
+	}
+	button{
+		margin-right: -300px;
+		/* margin-left: 350px; */
+		/* margin-top: 450px; */
+	}
+		
+		
+		
+
+	
+}	
 .white-color{
 	color: white;
 
@@ -157,18 +125,6 @@ body{
 
 }
 
-.icons:hover{
-	background-color: #13F8CE;
-	
-}
-
-.my-brand-name a{
-	width: 66px;
-	background-color: #141414;
-	position: relative;
-	display: block;
-
-}
 
 .anchor{
 	color: #13F8CE;
@@ -187,22 +143,6 @@ body{
 	
 }
 
-/*.letter{
-	margin-left: 1000px;
-	color: white;
-	font-size: 400px;
-	text-transform: capitalize;
-	text-shadow: 2px 2px 5px red;
-	padding: 70px;
-	position: fixed;
-	text-align: center;	
-	/*width: 30%;
-	height: auto;*/
-	/*animation-name: letter;
-	animation-duration: 10s;
-	
-}*/
-/**/
 
 @keyframes letter{
 	0%   {left:0px; top:0px;}
