--- a/UI/Assets/CSS/blog.css
+++ b/UI/Assets/CSS/blog.css
@@ -20,11 +20,14 @@ body{
 	overflow: hidden;
 	/* background-color: rgb(218, 19, 224); */
 	margin-left: 90px;
-  }
+}
      
-  .navs a:hover {
+.navs a:hover {
 	background-color: lightblue;
-  }
+}
+#read-more, #uno,#duo{
+	display: none;
+}
   .navs a.active {
 	background-color: #4CAF50;
 	color: black;
@@ -40,6 +43,7 @@ body{
 	  display: block;
 	}
   }
+  
 
   @media screen and (max-width: 600px) {
 	.navs.responsive {position: relative;}
