--- a/UI/Assets/CSS/about.css
+++ b/UI/Assets/CSS/about.css
@@ -15,9 +15,14 @@
 .about .about-content .img img{
 	width: 30%;
 	display: block;
+	padding: 20px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  	/* transition: 0.3s; */
 	/* padding: 30px; */
 }
-
+.about .about-content .img img:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
 
 .about .about-content .text-around-pic h4{
