--- a/UI/Assets/CSS/about.css
+++ b/UI/Assets/CSS/about.css
@@ -16,9 +16,11 @@
 	width: 30%;
 	display: block;
 	padding: 20px;
+	border-radius: 10% ;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  	/* transition: 0.3s; */
-	/* padding: 30px; */
+  	transition: 0.3s;
+  	
+	
 }
 .about .about-content .img img:hover{
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
