Reacting on feedback for admin view page

--- a/UI/Assets/CSS/p.css
+++ b/UI/Assets/CSS/p.css
@@ -24,25 +24,45 @@ body{
 	margin-left: 90px;
 	width: 300px;
 	height: 400px;
+	
 	float: left;
 	background-color: cornflowerblue;
 	color: white;
 
+
 }
+#admin-siderbar .toggle-btn{
+	position: absolute;
+	left: 400px;
+	top: 200px;
+	
+}
+
 #blogs{
 	margin-left: 90px;
 	height: 700px;
 	background-color: turquoise;
+	padding: 10px;
+	line-height: 50px;
 }
+@media screen and (max-width: 600px){
+	#admin-siderbar{
+		height: 200px;
+	}
+}
+
 #admin-logo{
 	border-radius: 50%;
 	width: 7%;
 	margin-top: 15px;
 	cursor: pointer;
 }
-#admin-siderbar ul li{
-	padding: 30px;
+#admin-siderbar ul li a{
+	padding: 10px;
 	border-bottom: 3px solid whitesmoke;
+	cursor: pointer;
+	line-height: 50px;
+	color: blanchedalmond;
 }
 @media screen and (max-width: 600px){
 	#admin-header, #blogs{
@@ -55,38 +75,6 @@ body{
 	}
 }
 
-/* .navs ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	
-  }
-  .navs ul li{
-	  float: left;
-	  /* margin-right: 100px; */
-      /* padding-left: 50px;
-	  padding-right: 50px; */
-	  padding: 10px; 
-  }
-  .navs ul li a {
-	display: block;
-	color: white;
-	text-align: left;
-	padding: 14px 16px;
-	text-decoration: none;
-	background-color: black;
-	float: right;
-  }
-  .navs ul li a:hover {
-	background-color: blue;
-  }
-  /* .active {
-	background-color: #4CAF50;
-  } */
-  .navs ul li {
-	border-right: 1px solid white;
-  }
-  .navs ul li:last-child {
-	border-right: none;
-  } */
+
+ 
+ 
